# shadowmeter

./: .gitmodules  Dockerfile  Dockerfile.apps  Dockerfile.base  Dockerfile.builder  README.md  TODO.md  docker-compose-datadog.yml  docker-compose.yml
etc/: shadowmeter-vector.yaml  shadowmeter.logrotate  super_mediator.conf  super_mediator_cache.conf  super_mediator_json.conf  super_mediator_text.conf  yaf.conf
etc/logrotate/: shadowmeter.logrotate
etc/yaf/: super_mediator.conf  super_mediator_cache.conf  yafDPIRules.conf
nginx/conf.d/: default.conf  ssl.conf
questdb_logger/: Cargo.toml
questdb_logger/src/: main.rs  questdb.rs
scripts/: build-all.sh  docker-build-apps.sh  docker-build-base.sh  docker-build-builder.sh  docker-build-final.sh  docker-build-image.sh  docker-build.sh  docker-cleanup.sh  docker-push-image.sh  entrypoint-questdb_logger.sh  entrypoint-shadowmeter.sh  entrypoint-sm_export.sh  entrypoint-sm_import.sh  entrypoint-sm_yaf.sh  entrypoint-super_mediator.sh  entrypoint-yaf.sh  pytorch-build-env.sh  pytorch-env.sh  run-questdb.sh  start-super_mediator.sh  start-yaf.sh  super_mediator-entrypoint.sh  yaf-entrypoint.sh
shadowmeter_cli/: Cargo.toml  build.rs
shadowmeter_cli/src/: main.rs  shadowmeter.rs
shadowmeter_client/: Cargo.toml  build.rs  db_export.sh
shadowmeter_client/src/: main.rs  shadowmeter.rs
shadowmeter_collector/: Cargo.toml  build.rs
shadowmeter_collector/src/: main.rs
shadowmeter_engine/: Cargo.toml
shadowmeter_engine/src/: main.rs
shadowmeter_engine/src/analyzer/: mod.rs
shadowmeter_engine/src/analyzer/model/: mod.rs
shadowmeter_engine/src/flow/: mod.rs
shadowmeter_engine/src/logger/: mod.rs
shadowmeter_engine/src/scanner/: mod.rs
shadowmeter_ipfix/: Cargo.toml  build.rs
shadowmeter_ipfix/src/: main.rs  yaf_file_process.c
shadowmeter_logger/: Cargo.toml
shadowmeter_logger/src/: main.rs  questdb.rs
shadowmeter_nginx/: Dockerfile
shadowmeter_nginx/etc/: default.conf
shadowmeter_nginx/scripts/: docker-build-nginx.sh  docker-push-nginx.sh
shadowmeter_server/: Cargo.toml
shadowmeter_server/spool/: sm.1721772773123754198.flow  sm.1721772773242490940.flow  sm.1721772773355371441.flow  sm.1721772773600799152.flow  sm.1721772773992862336.flow  sm.1721772774115841894.flow  sm.1721772774490338890.flow
shadowmeter_server/src/: main.rs
shadowmeter_server/upload/: QKw
sm_detect/: Cargo.toml
sm_detect/src/: main.rs  shadowmeter.rs
sm_detect/src/shadowmeter/: feature.rs  inference.rs
sm_example/: Cargo.toml
sm_example/src/: main.rs
sm_example/src/shadowmeter/: mod.rs
sm_example/src/shadowmeter/sink/: mod.rs
sm_example/src/shadowmeter/source/: mod.rs
sm_export/: Cargo.toml  build.rs
sm_export/src/: main.rs
sm_export/src/lib/: fixbuf_wrapper.c
sm_flow/: Cargo.toml  build.rs
sm_flow/src/: main.rs  (+1 more)
(+20 files in other folders)
