[package]
name = "shadowmeter"
version = "0.1.0"
edition = "2021"
authors = ["randy@shadowmeter.io"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
clap = { version = "4.5.3", features = ["derive"] }
serde = "1.0.197"
questdb-rs = "4.0.0"
chrono = "0.4.35"
csv = "1.3.0"
glob = "0.3.1"
serde_derive = "1.0.197"
lazy_static = "1.4.0"
