[package]
name = "shadowmeter"
version = "0.1.0"
edition = "2021"
authors = ["randy@shadowmeter.io"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
clap = { version = "4.5.3", features = ["derive"] }
questdb-rs = "4.0.0"
chrono = "0.4.35"
csv = "1.3.0"
glob = "0.3.1"
serde_derive = "1.0.197"
lazy_static = "1.4.0"
anyhow = "1.0.82"
tch = "0.16.0"
geoip2 = "0.1.7"
serde = { version = "1.0.204", features = ["derive"] }