[package]
name = "shadowmeter_ipfix"
version = "0.1.0"
edition = "2021"
authors = ["randy@shadowmeter.io"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.69.4"
pkg-config = "0.3.30"
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
c_string = "0.7.2"
libc = "0.2"



