[package]
name = "sm_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
glob = "0.3.1"
quick-csv = "0.1.6"
rustc-serialize = "0.3.25"
